--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "eva-icons": "^1.1.3",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "keycloak-angular": "^14.0.0",
+    "keycloak-js": "^21.1.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "~1.2.9",
